# Roberto

./: README.md
roberto/: CMakeLists.txt  package.xml
roberto_lidar/: PruebasComandos.txt  package.xml  setup.cfg  setup.py
roberto_lidar/launch/: lidar.launch.py
roberto_lidar/roberto_lidar/: obstacle_avoidance_node.py  obstacle_detection_node.py  package.xml  setup.py
roberto_maps/: package.xml  setup.cfg  setup.py
roberto_maps/maps/: mapadelmundo.pgm
roberto_mundo/: CMakeLists.txt  package.xml
roberto_mundo/launch/: roberto.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
roberto_mundo/maps/: mapadelmundo.yaml
roberto_mundo/models/small_house/: model.config  model.sdf
roberto_mundo/models/turtlebot3_burger/: model.sdf
roberto_mundo/src/: obstacle1.cpp  obstacle2.cpp  obstacles.cpp  traffic_bar_plugin.cpp  traffic_light_plugin.cpp
roberto_mundo/worlds/: distribution_center.world  roberto.world
roberto_nav_punto/: package.xml  setup.cfg  setup.py  test_localizacion.txt
roberto_nav_punto/config/: amcl_params.yaml  map_server_params.yaml
roberto_nav_punto/launch/: localization.launch.py  map_server.launch.py
roberto_nav_punto/rviz/: localization.rviz
roberto_nav_ruta/: package.xml  setup.cfg  setup.py
roberto_nav_ruta/launch/: navigate_to_pose.launch.py  roberto_nav.launch.py
roberto_nav_ruta/param/: nav2_params.yaml
roberto_nav_ruta/roberto_nav_ruta/: follow_waypoints.py  navigate_to_pose.py
roberto_nav_ruta/rviz/: roberto_navigation.rviz
