<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roberto</name>
  <version>1.0.0</version>
  <description>
    Paquete principal y metapackage para el proyecto Roberto
  </description>
  
  <maintainer email="tu_correo@ejemplo.com">Tu Nombre</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://tu_sitio_web</url>
  <author email="tu_correo@ejemplo.com">Tu Nombre</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>roberto_lidar</exec_depend>
  <exec_depend>roberto_mundo</exec_depend>
  <exec_depend>roberto_nav_punto</exec_depend>
  <exec_depend>roberto_nav_ruta</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>